--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </ul>
     
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
+                        <li class="header__navbar-item header__navbar-item--has-notify">
                             <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fas fa-bell"></i>
                                 Thông báo
@@ -63,8 +63,17 @@
                                         <a href="" class="header__notify-link">
                                             <img src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lgurcl7xiwab80" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm Ohui chính hãng</span>
-                                                <span class="header__notify-description">Mô tả mỹ phẩm Ohui chính hãng</span>
+                                                <span class="header__notify-name">Xác thực chính hãng nguồn gốc các sản phẩm Ohui</span>
+                                                <span class="header__notify-description">HiddenTag là giải pháp xác thực hàng chính hãng bằng công nghệ tiên tiến nhất hiện nay.</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item header__notify-item--viewed">
+                                        <a href="" class="header__notify-link">
+                                            <img src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lgurcl7xiwab80" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Sale Sốc bộ dưỡng Ohui The First Tái tạo trẻ hóa da SALE OFF 70%</span>
+                                                <span class="header__notify-description">Giá chỉ còn 375.000 (giá gốc: 1.250.000 vnd).</span>
                                             </div>
                                         </a>
                                     </li>
@@ -72,17 +81,8 @@
                                         <a href="" class="header__notify-link">
                                             <img src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lgurcl7xiwab80" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm Ohui chính hãng</span>
-                                                <span class="header__notify-description">Mô tả mỹ phẩm Ohui chính hãng</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class="header__notify-item">
-                                        <a href="" class="header__notify-link">
-                                            <img src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lgurcl7xiwab80" alt="" class="header__notify-img">
-                                            <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm Ohui chính hãng</span>
-                                                <span class="header__notify-description">Mô tả mỹ phẩm Ohui chính hãng</span>
+                                                <span class="header__notify-name">Ohui chính thức ra mắt dòng son lì mới THE FIRST GENITURE LIPSTICK</span>
+                                                <span class="header__notify-description">Một làn môi căng mềm, quyến rũ với sắc màu nổi bật luôn là điều mà các quý cô ao ước.</span>
                                             </div>
                                         </a>
                                     </li>
