--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                         <div class="home-product">
                             <div class="grid__row">
-                                <div class="grid__column-2">
+                                <div class="grid__column-2-4">
                                     <!-- Product item -->
                                     <div class="home-product-item">
                                         <div class="home-product-item__img" style="background-image:url(./assets/img/aoshopee.PNG);"></div>
@@ -321,17 +321,18 @@
                                             <span class="home-product-item__price-current">999.000đ</span>
                                         </div>
                                         <div class="home-product-item__action">
-                                            <span class="home-product-item__like">
-                                                <i class="far fa-heart"></i>
-                                                <!-- <i class="fas fa-heart"></i> -->
+                                            <span class="home-product-item__like home-product-item__like--liked">
+                                                <i class="home-product-item__like-icon-empty far fa-heart"></i>
+                                                <i class="home-product-item__like-icon-fill fas fa-heart"></i>
                                             </span>
                                             <div class="home-product-item__rating">
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
+                                                <i class="home-product-item__star--gold fas fa-star"></i>
+                                                <i class="home-product-item__star--gold fas fa-star"></i>
+                                                <i class="home-product-item__star--gold fas fa-star"></i>
+                                                <i class="home-product-item__star--gold fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
+                                            <span class="home-product-item__sold">88 đã bán </span>
                                         </div>
 
                                         <div class="home-product-item__origin">
@@ -341,7 +342,7 @@
 
                                         <div class="home-product-item__favourite">
                                             <i class="fas fa-check"></i>
-                                            Yêu thích
+                                            <span>Yêu thích</span>
                                         </div>
 
                                         <div class="home-product-item__sale-off">
